# pfd

./: .gitignore  Cargo.toml  README.md  Rocket.toml  pfd.conf
db/: 1.sh
src/: conf.rs  db.rs  main.rs  migrations.rs  model.rs  test.rs  tests.rs
src/controller/: auth_token.rs  exchange_rate.rs  exchange_rates.rs  mod.rs  user.rs  users.rs
src/model/: api_error.rs  api_result.rs  auth_token.rs  error.rs  exchange_rate.rs  id.rs  mod.rs  user.rs
src/provider/: ecb.rs  ecb_fiat.rs  iex.rs  iex_crypto.rs  mod.rs  provider.rs
src/repository/: auth_token.rs  auth_tokens.rs  exchange_rate.rs  exchange_rates.rs  mod.rs  user.rs  users.rs
src/service/: auth_token.rs  auth_tokens.rs  exchange_rate.rs  exchange_rates.rs  mod.rs  user.rs  users.rs
