[package]
name = "pfd"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
color-eyre = "0.5.11"
tracing = "0.1.26"
tracing-core = "0.1.18"
tracing-subscriber = "0.2.19"
tracing-appender = "0.1.2"
tracing-log = "0.1.2"
dirs = "3.0.2"
figment = "0.10.6"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = [ "json" ]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["sqlite_pool"]

[dependencies.rusqlite]
version = "0.25.3"
features = [ "bundled" ]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [ "rustls-tls", "json" ]

[dependencies.zip]
version = "0.5"

[dependencies.dotenv]
version = "0.15.0"

[dependencies.cron]
version = "0.9.0"

[dependencies.chrono]
version = "0.4.19"

[dependencies.tokio]
version = "1.9.0"
features = [ "full" ]

[dependencies.futures]
version = "0.3.16"
