[package]
name = "pfd"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.42"
tracing = "0.1.26"
tracing-core = "0.1.18"
tracing-subscriber = "0.2.19"
tracing-appender = "0.1.2"
tracing-log = "0.1.2"
dirs = "3.0.2"
figment = "0.10.6"
serde = { version = "1.0.127", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["sqlite_pool"] }
rusqlite = "0.25.3"
reqwest = { version = "0.11.4", default-features = false, features = [ "rustls-tls", "json" ] }
zip = "0.5.13"
cron = "0.9.0"
chrono = "0.4.19"
tokio = { version = "1.9.0", features = [ "full" ] }
futures = "0.3.16"
rust-argon2 = "0.8.3"
rand = "0.8.4"
